--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "mglobel",
   "license": "ISC",
   "devDependencies": {
+    "algoliasearch": "^3.13.1",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -36,6 +37,7 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
+    "algoliasearch": "^3.13.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
