--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-template": "^4.0.0",
     "instantsearch.js": "^1.4.2",
     "node-sass": "^3.4.2",
+    "react-addons-create-fragment": "^15.0.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
