change deploy task to s3_website

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Front-end site for KnowThyShelf",
   "scripts": {
-    "deploy": "npm run gh-pages",
-    "gh-pages": "gh-pages -d build -b gh-pages",
+    "deploy": "npm run build && s3_website push",
     "stats": "webpack --profile --json > stats.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
