--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "html-webpack-template": "^4.0.0",
     "instantsearch.js": "^1.4.2",
     "node-sass": "^3.4.2",
+    "purifycss-webpack-plugin": "^2.0.3",
     "react-addons-create-fragment": "^15.0.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.8.4"
+    "webpack-merge": "^0.8.4",
+    "webpack-validator": "^2.2.1"
   },
   "dependencies": {
     "algoliasearch": "^3.13.1",
