--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^3.4.2",
     "purifycss-webpack-plugin": "^2.0.3",
     "react-addons-create-fragment": "^15.0.2",
+    "react-addons-css-transition-group": "^15.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
