--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
   },
   "dependencies": {
     "algoliasearch": "^3.13.1",
-    "react-router": "^2.4.0",
+    "dotenv-webpack": "^1.2.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-router": "^2.4.0"
   },
   "repository": {
     "type": "git",
